<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_navig_graph"
    app:startDestination="@id/mainFragment">

    <fragment
        android:id="@+id/mainFragment"
        android:name="com.jinglebroda.presentation.singleActivity.mvvm.fragment.main.MainFragment"
        android:label="@string/app_name"
        tools:layout="@layout/fragment_main" >
        <action
            android:id="@+id/action_mainFragment_to_searchRecipeFragment"
            app:destination="@id/searchRecipeFragment" />
    </fragment>

    <fragment
        android:id="@+id/searchRecipeFragment"
        android:name="com.jinglebroda.presentation.singleActivity.mvvm.fragment.searchRecipe.SearchRecipeFragment"
        android:label="@string/search_screen_title"
        tools:layout="@layout/fragment_search_recipe" >
        <action
            android:id="@+id/action_searchRecipeFragment_to_showRecipeFragment"
            app:destination="@id/showRecipeFragment" />
    </fragment>

    <fragment
        android:id="@+id/showRecipeFragment"
        android:name="com.jinglebroda.presentation.singleActivity.mvvm.fragment.showRecipe.ShowRecipeFragment"
        android:label="@string/show_recipe_screen_title"
        tools:layout="@layout/fragment_show_recipe" >
        <argument
            android:name="hitsParcelize"
            app:argType="com.jinglebroda.presentation.singleActivity.mvvm.utils.recipeParcelize.HitsParcelize"
            app:nullable="true"
            android:defaultValue="@null" />
    </fragment>
</navigation>