<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/alter_grey"
    tools:context=".singleActivity.mvvm.fragment.searchRecipe.SearchRecipeFragment" >

    <ImageView
        android:id="@+id/searchScreenExpandedLogo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="4dp"
        android:src="@drawable/ic_expanded_logo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/searchScreenPreviewPic"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:background="@color/black"
        android:src="@drawable/tmp_test"
        app:layout_constraintBottom_toTopOf="@+id/titleSearchRecipeScreen"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/searchScreenExpandedLogo" />

    <Button
        android:id="@+id/searchRecipeButton"
        style="@style/AppDefaultButtonsStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="64dp"
        android:padding="16dp"
        android:text="@string/for_recipes_string"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/inputFieldIngredients"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="8dp"
        android:background="@color/white"
        android:ems="10"
        android:gravity="top"
        android:hint="@string/example_range_ingridient"
        android:inputType="textMultiLine"
        android:padding="8dp"
        android:textColor="@color/black"
        android:textColorHint="@color/grey"
        app:layout_constraintBottom_toTopOf="@+id/bottomTextSearchRecipeScreen"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/titleSearchRecipeScreen" />

    <TextView
        android:id="@+id/bottomTextSearchRecipeScreen"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp"
        android:text="@string/bottom_search_recipe_string"
        android:textColor="@color/backgroundButton"
        app:layout_constraintBottom_toTopOf="@+id/searchRecipeButton"
        app:layout_constraintEnd_toEndOf="@+id/inputFieldIngredients"
        app:layout_constraintStart_toStartOf="@+id/inputFieldIngredients" />

    <TextView
        android:id="@+id/titleSearchRecipeScreen"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:fontFamily="sans-serif-black"
        android:text="@string/product_list_string"
        android:textColor="@color/backgroundButton"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="64dp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/searchRecipeButton"
        app:layout_constraintStart_toStartOf="@+id/searchRecipeButton"
        app:layout_constraintTop_toTopOf="@+id/searchRecipeButton" />
</androidx.constraintlayout.widget.ConstraintLayout>